@@ -40,7 +40,7 @@ comet:
   param:                                       # comet parameter file (default "comet.params.txt")
   raw: mzML                                    # format of the spectra file
 
-msfragger:                                     # v2.2
+msfragger:                                     # v2.3
   path:                                        # path to MSFragger jar
   memory: 8                                    # how much memory in GB to use
   param:                                       # MSFragger parameter file
@@ -54,7 +54,8 @@ msfragger:                                     # v2.2
   fragment_mass_tolerance: 20                  # fragment mass tolerance (window is +/- this value)
   fragment_mass_units: 1                       # fragment mass tolerance units (0 for Da, 1 for ppm)
   calibrate_mass: 0                            # 0=Off, 1=On, 2=On and find optimal parameters
-  isotope_error: 0/1/2                         # 0=off, -1/0/1/2/3 (standard C13 error)
+  deisotope: 0                                 # activates deisotoping.
+  isotope_error: -1/0/1/2/3                    # 0=off, -1/0/1/2/3 (standard C13 error)
   mass_offsets: 0                              # allow for additional precursor mass window shifts. Multiplexed with isotope_error. mass_offsets = 0/79.966 can be used as a restricted ‘open’ search that looks for unmodified and phosphorylated peptides (on any residue)
   precursor_mass_mode: selected                # selected or isolated
   localize_delta_mass: 0                       # this allows shifted fragment ions - fragment ions with mass increased by the calculated mass difference, to be included in scoring
@@ -66,15 +67,15 @@ msfragger:                                     # v2.2
   num_enzyme_termini: 2                        # 2 for enzymatic, 1 for semi-enzymatic, 0 for nonspecific digestion
   allowed_missed_cleavage: 1                   # maximum value is 5
   clip_nTerm_M: 1                              # specifies the trimming of a protein N-terminal methionine as a variable modification (0 or 1)
-  variable_mod_01: 15.99490 M                  # variable modification
-  variable_mod_02: 42.01060 [^                 # variable modification
+  variable_mod_01: 15.99490 M 3                # variable modification
+  variable_mod_02: 42.01060 [^ 1               # variable modification
   variable_mod_03:                             # variable modification
   variable_mod_04:                             # variable modification
   variable_mod_05:                             # variable modification
   variable_mod_06:                             # variable modification
   variable_mod_07:                             # variable modification
   allow_multiple_variable_mods_on_residue: 1   # static mods are not considered
-  max_variable_mods_per_mod: 3                 # maximum of 5
+  max_variable_mods_per_peptide: 3             # maximum of 5
   max_variable_mods_combinations: 5000         # maximum of 65534, limits number of modified peptides generated from sequence
   output_file_extension: pepXML                # file extension of output files
   output_format: pepXML                        # file format of output files (pepXML or tsv)
@@ -249,27 +250,28 @@ abacus:
   uniqueOnly: false                            # report TMT quantification based on only unique peptides
   reprint: false                               # create abacus reports using the Reprint format
 
-tmtintegrator:                                 # v1.9
-  path:                                        # path to TMT-Integrator jar
-  memory: 8                                    # memory allocation, in Gb
-  output:                                      # the location of output files
-  channel_num: 10                              # number of channels in the multiplex (e.g. 10, 11)
-  ref_tag:                                     # unique tag for identifying the reference channel (Bridge sample added to each multiplex)
-  groupby: -1                                  # level of data summarization(0: PSM aggregation to the gene level; 1: protein; 2: peptide sequence; 3: PTM site; -1: generate reports at all levels)
-  psm_norm: false                              # perform additional retention time-based normalization at the PSM level
-  outlier_removal: true                        # perform outlier removal
-  prot_norm: -1                                # normalization (0: None; 1: MD (median centering); 2: GN (median centering + variance scaling); -1: generate reports with all normalization options)
-  min_pep_prob: 0.9                            # minimum PSM probability threshold (in addition to FDR-based filtering by Philosopher)
-  min_purity: 0.5                              # ion purity score threshold
-  min_percent: 0.05                            # remove low intensity PSMs (e.g. value of 0.05 indicates removal of PSMs with the summed TMT reporter ions intensity in the lowest 5% of all PSMs)
-  unique_pep: false                            # allow PSMs with unique peptides only (if true) or unique plus razor peptides (if false), as classified by Philosopher and defined in PSM.tsv files
-  unique_gene: 0                               # additional, gene-level uniqueness filter (0: allow all PSMs; 1: remove PSMs mapping to more than one GENE with evidence of expression in the dataset; 2:remove all PSMs mapping to more than one GENE in the fasta file)
-  best_psm: true                               # keep the best PSM only (highest summed TMT intensity) among all redundant PSMs within the same LC-MS run
-  prot_exclude: none                           # exclude proteins with specified tags at the beginning of the accession number (e.g. none: no exclusion; sp|,tr| : exclude protein with sp| or tr|)
-  allow_overlabel: true                        # allow PSMs with TMT on S (when overlabeling on S was allowed in the database search)
-  allow_unlabeled: true                        # allow PSMs without TMT tag or acetylation on the peptide n-terminus 
-  mod_tag: none                                # PTM info for generation of PTM-specific reports (none: for Global data; S(79.9663),T(79.9663),Y(79.9663): for Phospho; K(42.0106): for K-Acetyl)
-  min_site_prob: -1                            # site localization confidence threshold (-1: for Global; 0: as determined by the search engine; above 0 (e.g. 0.75): PTMProphet probability, to be used with phosphorylation only)
-  ms1_int: true                                # use MS1 precursor ion intensity (if true) or MS2 summed TMT reporter ion intensity (if false) as part of the reference sample abundance estimation 
-  top3_pep: true                               # use top 3 most intense peptide ions as part of the reference sample abundance estimation
-  print_RefInt: false                          # print individual reference sample abundance estimates for each multiplex in the final reports (in addition to the combined reference sample abundance estimate)
+tmtintegrator:                                 # v1.1.2
+path:                                          # path to TMT-Integrator jar
+memory: 6                                      # memory allocation, in Gb
+output:                                        # the location of output files
+channel_num: 10                                # number of channels in the multiplex (e.g. 10, 11)
+ref_tag: Bridge                                # unique tag for identifying the reference channel (Bridge sample added to each multiplex)
+groupby: -1                                    # level of data summarization(0: PSM aggregation to the gene level; 1: protein; 2: peptide sequence; 3: PTM site; -1: generate reports at all levels)
+psm_norm: false                                # perform additional retention time-based normalization at the PSM level
+outlier_removal: true                          # perform outlier removal
+prot_norm: -1                                  # normalization (0: None; 1: MD (median centering); 2: GN (median centering + variance scaling); -1: generate reports with all normalization options)
+min_pep_prob: 0.9                              # minimum PSM probability threshold (in addition to FDR-based filtering by Philosopher)
+min_purity: 0.5                                # ion purity score threshold
+min_percent: 0.05                              # remove low intensity PSMs (e.g. value of 0.05 indicates removal of PSMs with the summed TMT reporter ions intensity in the lowest 5% of all PSMs)
+unique_pep: false                              # allow PSMs with unique peptides only (if true) or unique plus razor peptides (if false), as classified by Philosopher and defined in PSM.tsv files
+unique_gene: 0                                 # additional, gene-level uniqueness filter (0: allow all PSMs; 1: remove PSMs mapping to more than one GENE with evidence of expression in the dataset; 2:remove all PSMs mapping to more than one GENE in the fasta file)
+best_psm: true                                 # keep the best PSM only (highest summed TMT intensity) among all redundant PSMs within the same LC-MS run
+prot_exclude: none                             # exclude proteins with specified tags at the beginning of the accession number (e.g. none: no exclusion; sp|,tr| : exclude protein with sp| or tr|)
+allow_overlabel: true                          # allow PSMs with TMT on S (when overlabeling on S was allowed in the database search)
+allow_unlabeled: true                          # allow PSMs without TMT tag or acetylation on the peptide n-terminus 
+mod_tag: none                                  # PTM info for generation of PTM-specific reports (none: for Global data; S[167],T[181],Y[243]: for Phospho; K[170]: for K-Acetyl)
+min_site_prob: -1                              # site localization confidence threshold (-1: for Global; 0: as determined by the search engine; above 0 (e.g. 0.75): PTMProphet probability, to be used with phosphorylation only)
+ms1_int: true                                  # use MS1 precursor ion intensity (if true) or MS2 summed TMT reporter ion intensity (if false) as part of the reference sample abundance estimation 
+top3_pep: true                                 # use top 3 most intense peptide ions as part of the reference sample abundance estimation
+print_RefInt: false                            # print individual reference sample abundance estimates for each multiplex in the final reports (in addition to the combined reference sample abundance estimate)
+add_Ref: -1                                    # add an artificial reference channel if there is no reference channel (-1: don't add the reference; 0: use summation as the reference; 1: use average as the reference; 2: use median as the reference)
